# baremetalstm32

./: .gitmodules
blink/: CMakeLists.txt
blink/src/: main.c
http_server/: CMakeLists.txt  openocd.cfg
http_server/.cache/clangd/index/: ethernet.c.6E607BC7A1C3E93F.idx  ethernet.h.D2B9EBB2FDE42881.idx  main.c.B73B00E85EB99E62.idx  uart.c.87EC397D74309C98.idx  uart.h.03AB641F80053AE2.idx
http_server/cmake/: arm-none-eabi-toolchain.cmake
http_server/inc/: ethernet.h  stm32h753xx.h  uart.h
http_server/linker/: stm32h753zi.ld
http_server/src/: ethernet.c  main.c  startup.s  uart.c
